--- a/index.html
+++ b/index.html
@@ -111,30 +111,7 @@
                 <a href="#couples" className="mt-4 inline-flex text-sm font-semibold underline">Try the Couples Exercise</a>
               </aside>
             </div>
-            <div className="mt-6 grid md:grid-cols-2 gap-6">
-              <div className="rounded-2xl bg-white/90 border border-black/10 shadow-sm overflow-hidden">
-                <div className="p-6 border-b border-black/10">
-                  <h3 className="font-semibold text-lg">Boundary Scripts — Exercise PDF</h3>
-                  <p className="mt-2 text-sm text-black/70">Read, print, or download using the viewer toolbar.</p>
-                </div>
-                <iframe
-                  title="Boundary Scripts PDF"
-                  className="w-full h-[520px]"
-                  src="boundary%20scripts.pdf#toolbar=1&view=FitH"
-                ></iframe>
-              </div>
-              <div className="rounded-2xl bg-white/90 border border-black/10 shadow-sm overflow-hidden">
-                <div className="p-6 border-b border-black/10">
-                  <h3 className="font-semibold text-lg">Introduce the Book — Exercise PDF</h3>
-                  <p className="mt-2 text-sm text-black/70">Three ways to introduce the workbook. Use the toolbar to print/download.</p>
-                </div>
-                <iframe
-                  title="Introduce the Book PDF"
-                  className="w-full h-[520px]"
-                  src="Introduce%20the%20book.pdf#toolbar=1&view=FitH"
-                ></iframe>
-              </div>
-            </div>
+            {/* Removed inline PDF previews per requirement; downloads are via buttons above */}
           </div>
         </section>
 
