--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               </div>
               <div className="rounded-2xl p-6 bg-white/90 border border-black/10 shadow-sm">
                 <h3 className="font-semibold text-lg">Do the Exercise</h3>
+                <p className="mt-2 text-sm text-black/70">Complete Part 1 on your own. Invite her to write Part 2 without interruption. Then read them to each other.</p>
                 <form className="mt-4 space-y-4" onSubmit={(e) => e.preventDefault()}>
                   <div><label className="block text-sm font-medium">✍️ Part 1: What I Think I Did</label><textarea className="mt-1 w-full rounded-xl border border-black/20 bg-white/80 px-3 py-2" rows="5" placeholder="Behaviors, patterns, words that made her feel unsafe or shut out."></textarea></div>
                   <div><label className="block text-sm font-medium">💬 Part 2: Her Response</label><textarea className="mt-1 w-full rounded-xl border border-black/20 bg-white/80 px-3 py-2" rows="5" placeholder="Baby, I’d like to know how I’ve hurt you that I’m not seeing or understanding — especially the things that are hard to say when we try to talk. Please take your time. This matters because you matter to me."></textarea></div>
