--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="text/babel">
     const { useState } = React;
     function App() {
-      const AMAZON_URL = "https://www.amazon.com/dp/XXXXXXXX"; // TODO replace
+      const AMAZON_URL = "https://www.amazon.com/dp/B0FMZN9V86";
       const [open, setOpen] = useState(false);
       const [email, setEmail] = useState("");
       const [msg, setMsg] = useState("");
